--- a/stats-project/backend/dockerfile
+++ b/stats-project/backend/dockerfile
@@ -1,5 +1,6 @@
 # Python image to use
-FROM python:3.10
+ARG PYTHON_VERSION=3.10
+FROM python:${PYTHON_VERSION}
 
 # Set the working directory to /app
 WORKDIR /app
@@ -13,6 +14,7 @@ RUN pip install --trusted-host pypi.python.org -r requirements.txt
 # Copy the rest of the working directory contents into the container at /app
 COPY . /app
 
+ENV PYTHONPATH="/app/"
 ENV FLASK_APP=factory.py
 ENV FLASK_ENV=development
 ENV FLASK_RUN_HOST=0.0.0.0
