--- a/stats-project/backend/dockerfile
+++ b/stats-project/backend/dockerfile
@@ -3,18 +3,18 @@ ARG PYTHON_VERSION=3.10
 FROM python:${PYTHON_VERSION}
 
 # Set the working directory to /app
-WORKDIR /app
+WORKDIR /backend
 
 # Copy the requirements file used for dependencies
-COPY requirements.txt /app/
+COPY requirements.txt /backend/
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
 # Copy the rest of the working directory contents into the container at /app
-COPY . /app
+COPY . /backend
 
-ENV PYTHONPATH="/app/"
+ENV PYTHONPATH="/backend/"
 ENV FLASK_APP=factory.py
 ENV FLASK_ENV=development
 ENV FLASK_RUN_HOST=0.0.0.0
