--- a/stats-project/Makefile
+++ b/stats-project/Makefile
@@ -5,12 +5,14 @@ BE_IMAGE_NAME := arxiv-stats-api
 BE_CONTAINER_NAME := arxiv-stats-api
 BE_DOCKERFILE := ./backend/Dockerfile
 BE_BUILD_CONTEXT := ./backend
+BE_PORT := 8080
 
 NODE_VERSION := $(shell cat frontend/.nvmrc | cut -c 2-)
 FE_IMAGE_NAME := arxiv-stats-ui
 FE_CONTAINER_NAME := arxiv-stats-ui
 FE_DOCKERFILE := ./frontend/Dockerfile
 FE_BUILD_CONTEXT := ./frontend
+FE_PORT := 9000
 
 up: stop-ui stop-api clean-api build-api run-api clean-ui build-ui run-ui
 
@@ -18,7 +20,7 @@ build-api:
 	docker build --build-arg PYTHON_VERSION=$(PYTHON_VERSION) -f $(BE_DOCKERFILE) -t $(BE_IMAGE_NAME) $(BE_BUILD_CONTEXT) --progress=plain
 
 run-api:
-	docker run -d --name $(BE_CONTAINER_NAME) -p 8080:8080 --env-file backend/.env $(BE_IMAGE_NAME) 
+	docker run -d --name $(BE_CONTAINER_NAME) -p ${BE_PORT}:${BE_PORT} --env-file backend/.env $(BE_IMAGE_NAME) 
 
 stop-api:
 	docker stop $(BE_CONTAINER_NAME)
@@ -31,7 +33,7 @@ build-ui:
 	docker build --build-arg NODE_VERSION=$(NODE_VERSION) -f $(FE_DOCKERFILE) -t $(FE_IMAGE_NAME) $(FE_BUILD_CONTEXT) --progress=plain
 
 run-ui:
-	docker run -d --name $(FE_CONTAINER_NAME) -p 3000:3000 $(FE_IMAGE_NAME)
+	docker run -d --name $(FE_CONTAINER_NAME) -p ${FE_PORT}:${FE_PORT} $(FE_IMAGE_NAME)
 
 stop-ui:
 	docker stop $(FE_CONTAINER_NAME)
