update package naming for style, fix test setup

--- a/stats-project/Makefile
+++ b/stats-project/Makefile
@@ -1,10 +1,10 @@
 .PHONY: up build-api run-api stop-api clean-api build-ui run-ui stop-ui clean-ui
 
-PYTHON_VERSION := $(shell cat stats-api/.python-version)
+PYTHON_VERSION := $(shell cat stats_api/.python-version)
 BE_IMAGE_NAME := arxiv-stats-api
 BE_CONTAINER_NAME := arxiv-stats-api
-BE_DOCKERFILE := ./stats-api/Dockerfile
-BE_BUILD_CONTEXT := ./stats-api
+BE_DOCKERFILE := ./stats_api/Dockerfile
+BE_BUILD_CONTEXT := ./stats_api
 BE_PORT := 8080
 
 NODE_VERSION := $(shell cat frontend/.nvmrc | cut -c 2-)
@@ -20,7 +20,7 @@ build-api:
 	docker build --build-arg PYTHON_VERSION=$(PYTHON_VERSION) -f $(BE_DOCKERFILE) -t $(BE_IMAGE_NAME) $(BE_BUILD_CONTEXT) --progress=plain
 
 run-api:
-	docker run -d --name $(BE_CONTAINER_NAME) -p ${BE_PORT}:${BE_PORT} --env-file stats-api/.env $(BE_IMAGE_NAME) 
+	docker run -d --name $(BE_CONTAINER_NAME) -p ${BE_PORT}:${BE_PORT} --env-file stats_api/.env $(BE_IMAGE_NAME) 
 
 stop-api:
 	docker stop $(BE_CONTAINER_NAME)
