--- a/stats-project/stats_api/dockerfile
+++ b/stats-project/stats_api/dockerfile
@@ -3,18 +3,18 @@ ARG PYTHON_VERSION=3.10
 FROM python:${PYTHON_VERSION}
 
 # Set the working directory to /app
-WORKDIR /stats-api
+WORKDIR /stats_api
 
 # Copy the requirements file used for dependencies
-COPY requirements.txt /stats-api/
+COPY requirements.txt /stats_api/
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
 # Copy the rest of the working directory contents into the container at /app
-COPY . /stats-api
+COPY . /stats_api
 
-ENV PYTHONPATH="/stats-api/"
+ENV PYTHONPATH="/stats_api/"
 ENV FLASK_APP=factory.py
 ENV FLASK_ENV=development
 ENV FLASK_RUN_HOST=0.0.0.0
