--- a/stats-project/Makefile
+++ b/stats-project/Makefile
@@ -1,10 +1,9 @@
-.PHONY: up build-api run-api stop-api clean-api build-ui run-ui stop-ui clean-ui
+.PHONY: up build-api run-api stop-api clean-api build-ui run-ui stop-ui clean-ui venv clean-venv
 
-PYTHON_VERSION := $(shell cat stats_api/.python-version)
-BE_IMAGE_NAME := arxiv-stats-api
-BE_CONTAINER_NAME := arxiv-stats-api
-BE_DOCKERFILE := ./stats_api/Dockerfile
-BE_BUILD_CONTEXT := ./stats_api
+BE_IMAGE_NAME := arxiv-stats
+BE_CONTAINER_NAME := arxiv-stats
+BE_DOCKERFILE := Dockerfile.api
+BE_BUILD_CONTEXT := .
 BE_PORT := 8080
 
 NODE_VERSION := $(shell cat frontend/.nvmrc | cut -c 2-)
@@ -17,10 +16,10 @@ FE_PORT := 9000
 up: stop-ui stop-api clean-api build-api run-api clean-ui build-ui run-ui
 
 build-api:
-	docker build --build-arg PYTHON_VERSION=$(PYTHON_VERSION) -f $(BE_DOCKERFILE) -t $(BE_IMAGE_NAME) $(BE_BUILD_CONTEXT) --progress=plain
+	docker build -f $(BE_DOCKERFILE) -t $(BE_IMAGE_NAME) $(BE_BUILD_CONTEXT) --progress=plain
 
 run-api:
-	docker run -d --name $(BE_CONTAINER_NAME) -p ${BE_PORT}:${BE_PORT} --env-file stats_api/.env $(BE_IMAGE_NAME) 
+	docker run -d --name $(BE_CONTAINER_NAME) -p ${BE_PORT}:${BE_PORT} --env-file stats/.env $(BE_IMAGE_NAME) 
 
 stop-api:
 	docker stop $(BE_CONTAINER_NAME)
