--- a/stats-project/Dockerfile.api
+++ b/stats-project/Dockerfile.api
@@ -12,7 +12,7 @@ RUN pip install -U pip "poetry==$POETRY_VERSION"
 COPY poetry.lock pyproject.toml ./
 RUN poetry config virtualenvs.create false && \
     poetry install --no-interaction --no-ansi \
-    --without dev --no-root
+    --without test --no-root
 
 ADD stats /app/stats
 
