--- a/stats-project/pyproject.toml
+++ b/stats-project/pyproject.toml
@@ -10,6 +10,7 @@ flask = "^3.1.1"
 flask-cors = "^6.0.1"
 flask-sqlalchemy = "^3.1.1"
 pg8000 = "^1.31.2"
+python-dotenv = "^1.1.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.4.1"
