--- a/stats-project/pyproject.toml
+++ b/stats-project/pyproject.toml
@@ -15,6 +15,10 @@ python-dotenv = "^1.1.1"
 [tool.poetry.group.test.dependencies]
 pytest = "^8.4.1"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^25.1.0"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
