--- a/cloudbuild-api.yaml
+++ b/cloudbuild-api.yaml
@@ -2,10 +2,10 @@ options:
   logging: CLOUD_LOGGING_ONLY
 
 substitutions:
-  DOCKERFILE: "Dockerfile.api"
-  IMAGE_NAME: "arxiv-stats"
-  PORT: "8080"
-  TARGET: "final"
+  _DOCKERFILE: "Dockerfile.api"
+  _IMAGE_NAME: "arxiv-stats"
+  _PORT: "8080"
+  _TARGET: "final"
 
 steps:
 # docker pull latest image
@@ -19,24 +19,24 @@ steps:
       - 'build'
       - '.'
       - '--build-arg'
-      - 'PORT=${PORT}'
+      - 'PORT=${_PORT}'
       - '-f'
-      - '${DOCKERFILE}'
+      - '${_DOCKERFILE}'
       - '--target'
-      - '${TARGET}'
+      - '${_TARGET}'
       - '--cache-from'
-      - 'gcr.io/$PROJECT_ID/${IMAGE_NAME}:latest'
+      - 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}:latest'
       - '-t'
-      - 'gcr.io/$PROJECT_ID/${IMAGE_NAME}:$COMMIT_SHA'
+      - 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$COMMIT_SHA'
       - '-t'
-      - 'gcr.io/$PROJECT_ID/${IMAGE_NAME}:latest'
+      - 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}:latest'
     id: Build
 # docker push to gcloud artifact registry
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - push
       - '--all-tags'
-      - 'gcr.io/$PROJECT_ID/${IMAGE_NAME}'
+      - 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
     id: Push
 # gcloud run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:slim'
@@ -47,12 +47,12 @@ steps:
       - $_SERVICE_NAME
       - '--platform=managed'
       - >-
-        --image=gcr.io/$PROJECT_ID/${IMAGE_NAME}:$COMMIT_SHA
+        --image=gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$COMMIT_SHA
       - >-
         --labels=commit-sha=$COMMIT_SHA,gcb-build-id=$BUILD_ID,gcb-trigger-id=$_TRIGGER_ID
       - '--region=$_DEPLOY_REGION'
       - '--quiet'
     id: Deploy
     entrypoint: gcloud
-images: ['gcr.io/$PROJECT_ID/${IMAGE_NAME}:latest', 'gcr.io/$PROJECT_ID/${IMAGE_NAME}:$COMMIT_SHA']
+images: ['gcr.io/$PROJECT_ID/${IMAGE_NAME}:latest', 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$COMMIT_SHA']
 
