--- a/cloudbuild-api.yaml
+++ b/cloudbuild-api.yaml
@@ -54,5 +54,5 @@ steps:
       - '--quiet'
     id: Deploy
     entrypoint: gcloud
-images: ['gcr.io/$PROJECT_ID/${IMAGE_NAME}:latest', 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$COMMIT_SHA']
+images: ['gcr.io/$PROJECT_ID/${_IMAGE_NAME}:latest', 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$COMMIT_SHA']
 
