--- a/cloudbuild-api.yaml
+++ b/cloudbuild-api.yaml
@@ -9,10 +9,10 @@ substitutions:
 
 steps:
 # docker pull latest image
-  - name: 'gcr.io/cloud-builders/docker'
-    entrypoint: 'bash'
-    args: ['-c', 'docker pull gcr.io/$PROJECT_ID/stats:latest']
-    id: Latest
+  # - name: 'gcr.io/cloud-builders/docker'
+  #   entrypoint: 'bash'
+  #   args: ['-c', 'docker pull gcr.io/$PROJECT_ID/stats:latest']
+  #   id: Latest
 # docker build, caching from latest
   - name: 'gcr.io/cloud-builders/docker'
     args:
@@ -24,8 +24,8 @@ steps:
       - '${_DOCKERFILE}'
       - '--target'
       - '${_TARGET}'
-      - '--cache-from'
-      - 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}:latest'
+      # - '--cache-from'
+      # - 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}:latest'
       - '-t'
       - 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$COMMIT_SHA'
       - '-t'
