manual change to args

--- a/cloudbuild-api.yaml
+++ b/cloudbuild-api.yaml
@@ -23,7 +23,7 @@ steps:
     args:
       - "build"
       - "--target"
-      - "${_TARGET}"
+      - "final"
       - "--build-arg"
       - "PORT=${_PORT}"
       - "-f"
