--- a/cloudbuild-api.yaml
+++ b/cloudbuild-api.yaml
@@ -15,10 +15,14 @@ availableSecrets:
 
 steps:
   # docker pull latest image
-  # - name: 'gcr.io/cloud-builders/docker'
-  #   entrypoint: 'bash'
-  #   args: ['-c', 'docker pull gcr.io/$PROJECT_ID/stats:latest']
-  #   id: Latest
+  - name: "gcr.io/cloud-builders/docker"
+    entrypoint: "bash"
+    args:
+      - "-c"
+      - "docker"
+      - "pull"
+      - "gcr.io/$PROJECT_ID/stats:latest"
+    id: Latest
   # docker build, caching from latest
   - name: "gcr.io/cloud-builders/docker"
     args:
@@ -29,8 +33,8 @@ steps:
       - "PORT=${_PORT}"
       - "-f"
       - "${_DOCKERFILE}"
-      # - '--cache-from'
-      # - 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}:latest'
+      - '--cache-from'
+      - 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}:latest'
       - "-t"
       - "gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$COMMIT_SHA"
       - "-t"
@@ -48,10 +52,8 @@ steps:
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk:slim"
     args:
       - "run"
-      - "services"
-      - "update"
+      - "deploy"
       - "$_SERVICE_NAME"
-      - "--platform=managed"
       - "--image=gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$COMMIT_SHA"
       - "--labels=commit-sha=$COMMIT_SHA,gcb-build-id=$BUILD_ID,gcb-trigger-id=$_TRIGGER_ID"
       - "--region=$_DEPLOY_REGION"
