--- a/cloudbuild-api.yaml
+++ b/cloudbuild-api.yaml
@@ -6,7 +6,6 @@ substitutions:
   _IMAGE_NAME: "arxiv-stats"
   _PORT: "8080"
   _TARGET: "runtime"
-  _SERVICE_NAME: "arxiv-stats"
 
 availableSecrets:
   secretManager:
@@ -53,7 +52,7 @@ steps:
     args:
       - "run"
       - "deploy"
-      - "$_SERVICE_NAME"
+      - "$_IMAGE_NAME"
       - "--image=gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$COMMIT_SHA"
       - "--labels=commit-sha=$COMMIT_SHA,gcb-build-id=$BUILD_ID,gcb-trigger-id=$_TRIGGER_ID"
       - "--region=$_DEPLOY_REGION"
