--- a/cloudbuild-deploy-api.yaml
+++ b/cloudbuild-deploy-api.yaml
@@ -1,16 +1,12 @@
 options:
   logging: CLOUD_LOGGING_ONLY
+  automapSubstitutions: true
 
 substitutions:
   _DOCKERFILE: "Dockerfile.api"
   _IMAGE_NAME: "arxiv-stats"
   _PORT: "8080"
   _TARGET: "runtime"
-
-availableSecrets:
-  secretManager:
-    - versionName: projects/$PROJECT_ID/secrets/latexml_db_uri/versions/latest
-      env: "SQLALCHEMY_DATABASE_URI"
 
 steps:
   # docker pull latest image
@@ -20,7 +16,7 @@ steps:
       - "-c"
       - "docker"
       - "pull"
-      - "gcr.io/$PROJECT_ID/stats:latest"
+      - "gcr.io/$PROJECT_ID/${_IMAGE_NAME}:latest"
     id: Latest
   # docker build, caching from latest
   - name: "gcr.io/cloud-builders/docker"
@@ -32,8 +28,8 @@ steps:
       - "PORT=${_PORT}"
       - "-f"
       - "${_DOCKERFILE}"
-      - '--cache-from'
-      - 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}:latest'
+      - "--cache-from"
+      - "gcr.io/$PROJECT_ID/${_IMAGE_NAME}:latest"
       - "-t"
       - "gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$COMMIT_SHA"
       - "-t"
@@ -51,15 +47,13 @@ steps:
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk:slim"
     args:
       - "run"
-      - "deploy"
-      - "$_IMAGE_NAME"
-      - "--image=gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$COMMIT_SHA"
-      - "--labels=commit-sha=$COMMIT_SHA,gcb-build-id=$BUILD_ID,gcb-trigger-id=$_TRIGGER_ID"
-      - "--region=$_DEPLOY_REGION"
-      - "--quiet"
-    env:
-      - "ENV=$_ENV"
-    secretEnv: ["SQLALCHEMY_DATABASE_URI"]
+      - "services"
+      - "replace"
+      - "service-api.yaml"
+      - "--project"
+      - "$PROJECT_ID"
+      - "--region"
+      - "$_DEPLOY_REGION"
     id: Deploy
     entrypoint: gcloud
 images:
