--- a/service-api-dev.yaml
+++ b/service-api-dev.yaml
@@ -6,11 +6,11 @@ spec:
   template:
     spec:
       containers:
-        - image: gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$COMMIT_SHA
+        - image: gcr.io/arxiv-development/arxiv-stats:latest
           env:
             - name: ENV
-              value: ${_ENV}
-            - name: ENV_VAR
+              value: DEV
+            - name: DEV_DATABASE_URI
               valueFrom:
                 secretKeyRef:
                   key: latest
