add back version

--- a/cicd/service-api-dev.yaml
+++ b/cicd/service-api-dev.yaml
@@ -13,4 +13,5 @@ spec:
             - name: DEV_DATABASE_URI
               valueFrom:
                 secretKeyRef:
+                  key: latest
                   name: latexml_db_uri
