update port because of namespace clash

--- a/cicd/service-ui-dev.yaml
+++ b/cicd/service-ui-dev.yaml
@@ -8,5 +8,5 @@ spec:
       containers:
         - image: gcr.io/arxiv-development/arxiv-stats-ui:latest
           env:
-            - name: PORT
+            - name: FE_PORT
               value: "9000"
