--- a/cicd/service-ui-dev.yaml
+++ b/cicd/service-ui-dev.yaml
@@ -12,4 +12,4 @@ spec:
               value: "9000"
           resources:
             limits:
-              memory: 1GiB
+              memory: 1G
