--- a/cicd/service-hourly-downloads-dev.yaml
+++ b/cicd/service-hourly-downloads-dev.yaml
@@ -6,22 +6,22 @@ spec:
   template:
     spec:
       containers:
-      - name: worker
-        image: us-central1-docker.pkg.dev/arxiv-production/gcf-artifacts/arxiv--production__us--central1__aggregate__hourly__downloads:version_1
-        env:
-        - name: ENVIRONMENT
-          value: DEVELOPMENT
-        - name: LOG_LEVEL
-          value: INFO
-        - name: LOG_EXECUTION_ID
-          value: 'true'
-        - name: CLASSIC_DB_URI
-          valueFrom:
-            secretKeyRef:
-              key: latest
-              name: readonly-arxiv-db-uri
-        - name: WRITE_TABLE
-          valueFrom:
-            secretKeyRef:
-              key: latest
-              name: latexml_db_uri_psycopg2
+        - name: worker
+          image: us-central1-docker.pkg.dev/arxiv-production/gcf-artifacts/arxiv--production__us--central1__aggregate__hourly__downloads:version_1
+          env:
+            - name: ENVIRONMENT
+              value: DEVELOPMENT
+            - name: LOG_LEVEL
+              value: INFO
+            - name: LOG_EXECUTION_ID
+              value: "true"
+            - name: CLASSIC_DB_URI
+              valueFrom:
+                secretKeyRef:
+                  key: latest
+                  name: readonly-arxiv-db-uri
+            - name: WRITE_TABLE
+              valueFrom:
+                secretKeyRef:
+                  key: latest
+                  name: latexml_db_uri_psycopg2
