remove trigger during testing

--- a/cicd/cloudbuild-deploy-hourly-downloads.yaml
+++ b/cicd/cloudbuild-deploy-hourly-downloads.yaml
@@ -24,8 +24,8 @@ steps:
         "python311",
         "--region",
         "${_DEPLOY_REGION}",
-        "--trigger-topic",
-        "${_PUBSUB_NAME}",
+        # "--trigger-topic",
+        # "${_PUBSUB_NAME}",
         "--entry-point",
         "${_FUNCTION_NAME}",
         "--env-vars-file",
