no retry for request triggers

--- a/cicd/cloudbuild-deploy-hourly-downloads.yaml
+++ b/cicd/cloudbuild-deploy-hourly-downloads.yaml
@@ -16,7 +16,7 @@ steps:
         "functions",
         "deploy",
         "${_FUNCTION_NAME}",
-        "--retry",
+        # "--retry",
         "--gen2",
         "--source",
         "${_PATH_TO_SOURCE}",
