--- a/stats-functions/aggregate_hourly_downloads/src/requirements.txt
+++ b/stats-functions/aggregate_hourly_downloads/src/requirements.txt
@@ -3,5 +3,4 @@ arxiv-base @ git+https://github.com/arXiv/arxiv-base.git@25952ff7b63ca3a36ac8f94
 google-cloud-logging
 google-cloud-bigquery
 sqlalchemy>=2.0.26
-mysqlclient >=2.1
-psycopg2-binary>=2.9.9
+cloud-sql-python-connector[pymysql] >=1.18.4
