Use terraform, and refactor (#12)
* first version for testing

* terraform fmt

* update function name to avoid overwrite

* minor updates

* terraform fmt

* update secret names

* fix topic

* update timeout, update source zips

* update gitignore

* update .gitignore

* remove pubsub attributes

* change message payload

* remove sensitive vars from logging

* update bq environment and add iam role

* update bq role

* add another bq role

* import bq dataset

* refactor db connections, remove unused code, improve readability

* delete unused cloudbuild files

* refactor function code

* refactor db connection

* update variables

* add hosts

* use sockets, add cloud sql client role

* fix project id

* use cloud sql python connector to fix db issues

* fix tests

* explicitly close connectors

* update docstrings on tests

* parameterize job vars with defaults

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,12 @@
 
 # node packages
 **/node_modules/
+
+# terraform
+**/.terraform/*
+*.tfoverride
+*.tfstate
+*.tfstate.backup
+
+# mac os
+**/.DS_Store
