--- a/.github/workflows/lint-and-test-aggregate-hourly-downloads.yml
+++ b/.github/workflows/lint-and-test-aggregate-hourly-downloads.yml
@@ -1,4 +1,4 @@
-name: Run aggregate-hourly-downloads unit tests
+name: Lint and test aggregate-hourly-downloads
 
 on:
   pull_request:
@@ -22,16 +22,23 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: "3.13"
+        python-version: "3.11"
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r ./stats-functions/aggregate-hourly-downloads/src/requirements.txt
-        pip install -r ./stats-functions/aggregate-hourly-downloads/src/requirements-dev.txt
+        pip install -r stats-functions/aggregate-hourly-downloads/src/requirements.txt
+        pip install -r stats-functions/aggregate-hourly-downloads/src/requirements-dev.txt
+
+    - name: Lint
+      run: |
+        ruff check --output-format=github stats-functions/aggregate-hourly-downloads/src
+
     - name: Test with pytest
-      working-directory: ./stats-functions/aggregate-hourly-downloads
+      working-directory: stats-functions/aggregate-hourly-downloads
       run: |
         pytest
