--- a/stats-entities/pyproject.toml
+++ b/stats-entities/pyproject.toml
@@ -1,15 +1,10 @@
 [project]
-name = "stats"
+name = "statsentities"
 version = "0.1.0"
-description = "Backend for the usage stats page on arxiv.org"
+description = "Entities for stats databases"
 requires-python = "~=3.10.0"
 dependencies = [
-    "atlas-provider-sqlalchemy>=0.4.0",
-    "flask>=3.1.2,<4",
-    "flask-cors>=6.0.1,<7",
-    "flask-sqlalchemy>=3.1.1,<4",
-    "pg8000>=1.31.4,<2",
-    "python-dotenv>=1.1.1,<2",
+    "sqlalchemy>=2.0.43",
 ]
 
 [dependency-groups]
