--- a/stats-api/pyproject.toml
+++ b/stats-api/pyproject.toml
@@ -2,7 +2,6 @@
 name = "stats-api"
 version = "0.1.0"
 description = "API for the usage stats page on arxiv.org"
-readme = "README.md"
 requires-python = "~=3.10.0"
 dependencies = [
     "atlas-provider-sqlalchemy>=0.4.0",
@@ -11,7 +10,7 @@ dependencies = [
     "flask-sqlalchemy>=3.1.1,<4",
     "pg8000>=1.31.4,<2",
     "python-dotenv>=1.1.1,<2",
-    "stats-entities>=0.1.0",
+    "stats-entities",
 ]
 
 [dependency-groups]
@@ -24,13 +23,7 @@ test = [
 default-groups = ["test"]
 
 [tool.uv.sources]
-stats-entities = { workspace = true, editable = true }
-
-[tool.uv.workspace]
-members = [
-    "stats-entities",
-    "stats-api",
-]
+stats-entities = { path = "../stats-entities", editable = true }
 
 [build-system]
 requires = ["hatchling"]
