--- a/stats-entities/pyproject.toml
+++ b/stats-entities/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "statsentities"
+name = "stats-entities"
 version = "0.1.0"
 description = "Entities for stats databases"
 requires-python = "~=3.10.0"
