--- a/stats-db/pyproject.toml
+++ b/stats-db/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "stats-db"
 version = "0.1.0"
-description = "Add your description here"
+description = "Migrations for stats-db, managed by atlas"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
