--- a/.github/workflows/lint-and-test-api.yml
+++ b/.github/workflows/lint-and-test-api.yml
@@ -27,7 +27,7 @@ jobs:
     - name: "Set up Python"
       uses: actions/setup-python@v5
       with:
-        python-version-file: "pyproject.toml"
+        python-version-file: "stats-api/pyproject.toml"
 
     - name: Install uv
       uses: astral-sh/setup-uv@v6
