--- a/.github/workflows/lint-and-test-api.yml
+++ b/.github/workflows/lint-and-test-api.yml
@@ -1,10 +1,10 @@
-name: Lint and test stats
+name: Lint and test stats-api
 
 on:
   pull_request:
     branches: [ main ]
     paths:
-      - 'stats/**'
+      - 'stats-api/**'
 
   workflow_dispatch:
     inputs:
@@ -27,17 +27,17 @@ jobs:
     - name: "Set up Python"
       uses: actions/setup-python@v5
       with:
-        python-version-file: "pyproject.toml"
+        python-version-file: "stats-api/pyproject.toml"
 
     - name: Install uv
       uses: astral-sh/setup-uv@v6
 
     - name: Install the project
-      run: uv sync --locked --all-extras --dev
+      run: uv sync --directory stats-api --locked --all-extras --dev
 
     - name: Lint
       run: |
-        uv run ruff check --output-format=github stats
+        uv run --directory stats-api ruff check --output-format=github .
 
     - name: Run tests
-      run: uv run pytest tests
+      run: uv run --directory stats-api pytest tests
