--- a/.github/workflows/lint-and-deploy-stats-db-migrations.yml
+++ b/.github/workflows/lint-and-deploy-stats-db-migrations.yml
@@ -85,7 +85,7 @@ jobs:
         uses: google-github-actions/get-secretmanager-secrets@v3
         with:
           secrets: |-
-            DB_PASSWORD:projects/${{ vars.GOOGLE_CLOUD_PROJECT }}/secrets/${{ vars.DB_PW_SECRET_NAME }}/versions/latest
+            STATS_DB_PW:projects/${{ vars.GCP_PROJECT_ID }}/secrets/${{ vars.STATS_DB_PW_SECRET_NAME }}/versions/latest
 
       - name: Download Cloud SQL proxy
         run: |
@@ -94,7 +94,7 @@ jobs:
 
       - name: Start Cloud SQL proxy
         run: |
-          nohup ./cloud-sql-proxy ${{ vars.INSTANCE_NAME }} --port 3306 > cloud-sql-proxy.out 2> cloud-sql-proxy.err < /dev/null &
+          nohup ./cloud-sql-proxy ${{ vars.STATS_DB_INSTANCE }} --port 3306 > cloud-sql-proxy.out 2> cloud-sql-proxy.err < /dev/null &
           echo "CLOUD_SQL_PROXY_PID=$!" >> $GITHUB_ENV
 
       - name: Wait for Cloud SQL Proxy to Start
@@ -105,7 +105,7 @@ jobs:
         uses: ariga/atlas-action/migrate/lint@v1
         with:
           dir: "file://stats-db/migrations"
-          dev-url: "mysql://${{ vars.DB_USER }}:${{ steps.gcp_secrets.outputs.DB_PASSWORD }}@localhost:3306/dev"
+          dev-url: "mysql://${{ vars.STATS_DB_USER }}:${{ steps.gcp_secrets.outputs.STATS_DB_PASSWORD }}@localhost:3306/dev"
         env:
           GITHUB_TOKEN: "${{ github.token }}"
 
@@ -138,7 +138,7 @@ jobs:
         uses: google-github-actions/get-secretmanager-secrets@v3
         with:
           secrets: |-
-            DB_PASSWORD:projects/${{ vars.GOOGLE_CLOUD_PROJECT }}/secrets/${{ vars.DB_PW_SECRET_NAME }}/versions/latest
+            STATS_DB_PW:projects/${{ vars.GCP_PROJECT_ID }}/secrets/${{ vars.STATS_DB_PW_SECRET_NAME }}/versions/latest
 
       - name: Download Cloud SQL proxy
         run: |
@@ -147,7 +147,7 @@ jobs:
 
       - name: Start Cloud SQL proxy
         run: |
-          nohup ./cloud-sql-proxy ${{ vars.INSTANCE_NAME }} --port 3306 > cloud-sql-proxy.out 2> cloud-sql-proxy.err < /dev/null &
+          nohup ./cloud-sql-proxy ${{ vars.STATS_DB_INSTANCE }} --port 3306 > cloud-sql-proxy.out 2> cloud-sql-proxy.err < /dev/null &
           echo "CLOUD_SQL_PROXY_PID=$!" >> $GITHUB_ENV
 
       - name: Wait for Cloud SQL Proxy to Start
@@ -158,7 +158,7 @@ jobs:
         uses: ariga/atlas-action/migrate/apply@v1
         with:
           dir: "file://stats-db/migrations"
-          url: "mysql://${{ vars.DB_USER }}:${{ steps.gcp_secrets.outputs.DB_PASSWORD }}@localhost:3306/dev"
+          url: "mysql://${{ vars.STATS_DB_USER }}:${{ steps.gcp_secrets.outputs.STATS_DB_PASSWORD }}@localhost:3306/dev"
 
       - name: Stop Cloud SQL Proxy
         if: always()
