--- a/.github/workflows/lint-and-deploy-stats-db-migrations.yml
+++ b/.github/workflows/lint-and-deploy-stats-db-migrations.yml
@@ -10,6 +10,7 @@ on:
   pull_request:
     branches: [main]
     paths:
+      - .github/workflows/ci-stats-db.yaml
       - "stats-entities/**"
   workflow_dispatch:
     inputs:
