add comments, add branch push for testing

--- a/.github/workflows/lint-and-deploy-stats-db-migrations.yml
+++ b/.github/workflows/lint-and-deploy-stats-db-migrations.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - ARXIVCE-3986-add-migration-workflow # for testing
     paths:
       - .github/workflows/ci-stats-db.yaml
       - "stats-db/migrations/**"
@@ -27,8 +28,16 @@ permissions:
   contents: read
   pull-requests: write
 
+env:
+  GCP_PROJECT_ID: arxiv-development
+  STATS_DB_INSTANCE: arxiv-development:us-central1:stats-db
+  STATS_DB_PW_SECRET_NAME: stats-db-siteusagemigrations-pw
+  STATS_DB_USER: siteusagemigrations
+
 jobs:
   check-diff:
+  # validate ORM entities against migrations 
+  # exit if changes exist which are not in migrations
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -64,6 +73,9 @@ jobs:
           exit 1
 
   lint:
+  # validate migrations against database
+  # connect via cloud sql proxy
+  # error if migrations cannot be deployed safely
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
     needs: check-diff
@@ -86,7 +98,7 @@ jobs:
         uses: google-github-actions/get-secretmanager-secrets@v3
         with:
           secrets: |-
-            STATS_DB_PW:projects/${{ vars.GCP_PROJECT_ID }}/secrets/${{ vars.STATS_DB_PW_SECRET_NAME }}/versions/latest
+            STATS_DB_PW:projects/${{ env.GCP_PROJECT_ID }}/secrets/${{ env.STATS_DB_PW_SECRET_NAME }}/versions/latest
 
       - name: Download Cloud SQL proxy
         run: |
@@ -95,7 +107,7 @@ jobs:
 
       - name: Start Cloud SQL proxy
         run: |
-          nohup ./cloud-sql-proxy ${{ vars.STATS_DB_INSTANCE }} --port 3306 > cloud-sql-proxy.out 2> cloud-sql-proxy.err < /dev/null &
+          nohup ./cloud-sql-proxy ${{ env.STATS_DB_INSTANCE }} --port 3306 > cloud-sql-proxy.out 2> cloud-sql-proxy.err < /dev/null &
           echo "CLOUD_SQL_PROXY_PID=$!" >> $GITHUB_ENV
 
       - name: Wait for Cloud SQL Proxy to Start
@@ -106,7 +118,7 @@ jobs:
         uses: ariga/atlas-action/migrate/lint@v1
         with:
           dir: "file://stats-db/migrations"
-          dev-url: "mysql://${{ vars.STATS_DB_USER }}:${{ steps.gcp_secrets.outputs.STATS_DB_PASSWORD }}@localhost:3306/dev"
+          dev-url: "mysql://${{ env.STATS_DB_USER }}:${{ steps.gcp_secrets.outputs.STATS_DB_PASSWORD }}@localhost:3306/dev"
         env:
           GITHUB_TOKEN: "${{ github.token }}"
 
@@ -116,6 +128,8 @@ jobs:
           kill ${{ env.CLOUD_SQL_PROXY_PID }}
 
   deploy:
+  # deploy migrations to database
+  # connect via cloud sql proxy
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
     if: github.ref == 'refs/heads/main'
@@ -139,7 +153,7 @@ jobs:
         uses: google-github-actions/get-secretmanager-secrets@v3
         with:
           secrets: |-
-            STATS_DB_PW:projects/${{ vars.GCP_PROJECT_ID }}/secrets/${{ vars.STATS_DB_PW_SECRET_NAME }}/versions/latest
+            STATS_DB_PW:projects/${{ env.GCP_PROJECT_ID }}/secrets/${{ env.STATS_DB_PW_SECRET_NAME }}/versions/latest
 
       - name: Download Cloud SQL proxy
         run: |
@@ -148,7 +162,7 @@ jobs:
 
       - name: Start Cloud SQL proxy
         run: |
-          nohup ./cloud-sql-proxy ${{ vars.STATS_DB_INSTANCE }} --port 3306 > cloud-sql-proxy.out 2> cloud-sql-proxy.err < /dev/null &
+          nohup ./cloud-sql-proxy ${{ env.STATS_DB_INSTANCE }} --port 3306 > cloud-sql-proxy.out 2> cloud-sql-proxy.err < /dev/null &
           echo "CLOUD_SQL_PROXY_PID=$!" >> $GITHUB_ENV
 
       - name: Wait for Cloud SQL Proxy to Start
@@ -159,7 +173,7 @@ jobs:
         uses: ariga/atlas-action/migrate/apply@v1
         with:
           dir: "file://stats-db/migrations"
-          url: "mysql://${{ vars.STATS_DB_USER }}:${{ steps.gcp_secrets.outputs.STATS_DB_PASSWORD }}@localhost:3306/dev"
+          url: "mysql://${{ env.STATS_DB_USER }}:${{ steps.gcp_secrets.outputs.STATS_DB_PASSWORD }}@localhost:3306/dev"
 
       - name: Stop Cloud SQL Proxy
         if: always()
